# MasterPassword-Gtk

./: .gitignore  CMakeLists.txt  README.md
resources/: mpw-gtk.desktop
src/mpw-algorithm/: CMakeLists.txt  mpw-algorithm.c  mpw-algorithm.h  mpw-algorithm_v0.c  mpw-algorithm_v1.c  mpw-algorithm_v2.c  mpw-algorithm_v3.c  mpw-types.c  mpw-types.h  mpw-util.c  mpw-util.h
src/mpw-gui/: CMakeLists.txt  main.cpp  mpw_create_account_window.cpp  mpw_create_account_window.h  mpw_login_window.cpp  mpw_login_window.h  mpw_manage_accounts_window.cpp  mpw_manage_accounts_window.h  mpw_password_window.cpp  mpw_password_window.h  mpw_window.cpp  mpw_window.h  simple_columns.cpp  simple_columns.h
src/mpw-model/: CMakeLists.txt  account_user.cpp  account_user.h  algorithm_version.cpp  algorithm_version.h  incognito_user.cpp  incognito_user.h  mpw_service.cpp  mpw_service.h  mpw_user.cpp  mpw_user.h  password_type.cpp  password_type.h  service.cpp  service.h  user.cpp  user.h  user_manager.cpp  user_manager.h
ui/: create-account.ui  login.ui  manage-accounts.ui  password.ui
